<resources>
    <string name="app_name">My Note</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="crime_title_hint">Enter a title for the note.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Done!</string>
    <string name="date_picker_title">Date</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s notes</string>
    <string name="Enter_Title">Title</string>
    <string name="Enter_Content">Enter details</string>
    <string name="zeroItemSelected">0 item selected</string>
    <string name="NoteHint">Note</string>
    <string name="title_of_timePicker">Time</string>
    <string name="ok">ok</string>
    <string name="setting_navi">settings</string>
    <string name="about_navi">about</string>
    <string name="choose_contact">Choose contact</string>
    <string name="share">share</string>
    <string name="share_note">%1$s "\n " %2$s "\n " %3$s  "\n"  %4$s  "\n" %5$s</string>
    <string name="crime_report_solved"> </string>
    <string name="crime_report_unsolved"> </string>
    <string name="crime_report_no_suspect"> </string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">My Note</string>
    <string name="send_report">Share Note Via</string>
    <string name="camera">camera_toolbar</string>
    <string name="Gallery">Gallery</string>
    <string name="more_apps">More Apps</string>
    <string name="new_note">New Note</string>
    <string name="Camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="Search">Search</string>
    <string name="Deleted">Deleted!</string>
    <string name="saved">Saved!</string>
    <string name="Favorite">Favorite</string>
    <string name="main_notes">Main Notes</string>
    <string name="trash">Trash</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="created">Created:</string>
    <string name="Remove">Remove</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="enter_a_quick_note">Enter a Quick Note !</string>
    <string name="adUnitId">ca-app-pub-1156456518677227/5827654096</string>
    <string name="layout">Layout</string>
    <string name="alarm">Alarm</string>
    <string name="off">Off</string>
    <string name="last_updated">Last Updated</string>
    <string name="attach">attach</string>

</resources>
