<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item android:id="@+id/settings_naviMainID"
          android:title="@string/setting_navi"
        android:icon="@drawable/ic_settings_black_24dp"
        />
<item android:id="@+id/aboutID"
      android:title="@string/about_navi"
    android:icon="@drawable/ic_info_black_24dp"/>

    <item android:id="@+id/moreappsID"
        android:title="@string/more_apps"
        android:icon="@drawable/ic_apps_black_24dp"/>

    </group>


    <item android:title="@string/new_note">

        <menu>
            <item
                android:id="@+id/MainListID"
                android:title="@string/main_notes"
                android:icon="@drawable/ic_action_name"/>

            <item android:id="@+id/FavoriteMainID"
                android:title="@string/Favorite"
                android:icon="@drawable/ic_favorite"/>

            <item android:id="@+id/TrashMainID"
                android:title="@string/trash"

                android:icon="@drawable/ic_trash"/>









        </menu>



    </item>











</menu>