<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightbrown">





<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">




    <!-- Toolbar -->
    <include
        layout="@layout/note_toolbar_layout"/>





    <!-- Title CardView -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/CardViewEdittextTitle"

        android:foreground="?android:attr/selectableItemBackground"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:background="@color/white"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_Title"
            android:id="@+id/EditTextFragmentID"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:background="@color/white"/>

    </android.support.v7.widget.CardView>





    <!-- Content CardView -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/CardViewContentID"
        android:background="@color/white"
        android:layout_margin="5dp"


        android:foreground="?android:attr/selectableItemBackground"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"

        android:layout_weight="30"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/IMGviewID"
                android:scaleType="centerInside"
                android:cropToPadding="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/IMGviewGalleryID"


                />

            <Button
                android:id="@+id/crime_dateBtnID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="reminder"
                android:background="@color/white"

                />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/NoteContentID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_margin="5dp"
                    android:padding="1dp"
                    android:hint="@string/NoteHint"
                    />




            </ScrollView>







        </LinearLayout>

        <!--
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"

                    android:text="@string/choose_contact"
                    android:id="@+id/choosecontactbtnID"
                    />


                <CheckBox
                    android:id="@+id/crime_solvedCheckID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/crime_solved_label"/>

            </LinearLayout>

        -->





      </android.support.v7.widget.CardView>






    <!-- Date below Content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
      >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CreatedNoteDateID"
            android:text="@string/created"
            android:paddingLeft="5dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/UpdatedNoteDateID"
            android:layout_alignParentRight="true"
            android:paddingRight="5dp"
            android:text="@string/last_updated"

            />

    </RelativeLayout>






</LinearLayout>

</android.support.design.widget.CoordinatorLayout>